<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_home_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:id="@+id/sv_weather"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/customborder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#2D00BCD4"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="180dp"
                android:layout_height="200dp">

<!--                <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                    android:id="@+id/fa_button_refresh_weather"-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:clickable="true"-->
<!--                    android:src="@drawable/ic_refresh"-->
<!--                    app:fabSize="mini"-->
<!--                    android:elevation="10dp"-->
<!--                    app:maxImageSize="30dp"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/tv_today"-->
<!--                    app:layout_constraintHorizontal_bias="0.321"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintVertical_bias="0.159" />-->


                <TextView
                    android:id="@+id/tv_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Today"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.164" />

                <TextView
                    android:id="@+id/tv_date_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wait a second..."
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.301"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_today"
                    app:layout_constraintVertical_bias="0.278" />

                <TextView
                    android:id="@+id/tv_temp_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Working hard to get data..."
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date_today"
                    app:layout_constraintVertical_bias="0.378" />

                <ImageView
                    android:id="@+id/iv_icon_today"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="88dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_date_today"
                    app:layout_constraintTop_toBottomOf="@+id/tv_today" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <TextView
                    android:id="@+id/tv_tmr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tomorrow"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.143" />

                <TextView
                    android:id="@+id/tv_date_tmr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wait a second..."
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.192"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tmr"
                    app:layout_constraintVertical_bias="0.278" />

                <TextView
                    android:id="@+id/tv_temp_tmr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Working hard to get data..."
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date_tmr"
                    app:layout_constraintVertical_bias="0.378" />

                <ImageView
                    android:id="@+id/iv_icon_tmr"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.583"
                    app:layout_constraintStart_toEndOf="@+id/tv_date_tmr"
                    app:layout_constraintTop_toBottomOf="@+id/tv_tmr"
                    app:layout_constraintVertical_bias="0.254" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#03A9F4"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="10dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_get_outfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get outfit idea"
        android:background="@drawable/customborder"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_weather"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/btn_create_outfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create outfit"
        android:background="@drawable/customborder"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_weather"
        app:layout_constraintVertical_bias="0.022" />

    <ScrollView
        android:id="@+id/sv_outfit"
        android:layout_width="408dp"
        android:layout_height="345dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_outfit"
        app:layout_constraintVertical_bias="0.16">

        <GridLayout
            android:id="@+id/gl_outfit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1"
            android:gravity="center" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

